# Course_work_3

./: .gitignore  README.md  main.py  pyproject.toml
tests/: conftest.py  test.json  test_utils.py
utils/: functions.py  utils.py
